vlib/v/checker/tests/unimplemented_interface_e.out
vlib/v/checker/tests/unimplemented_interface_e.vv:12:6: error: `Cat` incorrectly implements method `speak` of interface `Animal`: expected `string`, not `&string` for parameter 1
   10 | 
   11 | fn main() {
   12 |     foo(Cat{})
      |         ~~~~~
   13 | }
