vlib/v/checker/tests/unimplemented_interface_e.vv
interface Animal {
	speak(s string)
}

struct Cat {}

fn (_ Cat) speak(_ &string) {}

fn foo(_ Animal) {}

fn main() {
	foo(Cat{})
	_ = Animal(Cat{})
}
